--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "body-parser": "^1.20.0",
     "capture-website": "^2.4.0",
     "cors": "^2.8.5",
+    "export-to-csv": "^0.2.1",
     "express.js": "^1.0.0",
+    "json-as-xlsx": "^2.4.2",
     "mongoose": "^6.4.4",
     "puppeteer": "^15.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-to-excel": "^1.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
