--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.20.0",
     "capture-website": "^2.4.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "export-to-csv": "^0.2.1",
     "express.js": "^1.0.0",
     "json-as-xlsx": "^2.4.2",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.4",
     "puppeteer": "^15.3.2",
     "react": "^18.2.0",
